# vndf-2016

./: .gitignore  .gitmodules  GOALS  ISSUES  README  README.md  VISION.md  initial-state.json  project.conf  run  setup.bat  setup.sh  vndf.sublime-project
source/rust/: Cargo.toml
source/rust/acceptance-rs/: Cargo.toml
source/rust/acceptance-rs/src/: lib.rs  macros.rs  process.rs  tree.rs
source/rust/acpe/: Cargo.toml
source/rust/acpe/src/: lib.rs  protocol.rs
source/rust/client/: Cargo.toml  args.rs  camera.rs  components.rs  core.rs  display.rs  entities.rs  error.rs  font.rs  gamestate.rs  images.rs  input.rs  inputsender.rs  io.rs  main.rs  net.rs  network.rs  protocol.rs  text.rs  texture.rs  visual.rs
source/rust/client-core/: args.rs  main.rs  net.rs  protocol.rs
source/rust/client-ui/: args.rs  camera.rs  components.rs  core.rs  display.rs  entities.rs  font.rs  images.rs  input.rs  io.rs  main.rs  texture.rs
source/rust/client-ui/display/: mod.rs  window.rs
source/rust/client-ui/headless/: input.rs  mod.rs  renderer.rs
source/rust/client-ui/ui/: font.rs  input.rs  mod.rs  renderer.rs  textures.rs  window.rs
source/rust/client/game/: data.rs  mod.rs  receiver.rs  state.rs
source/rust/client/headless/: input.rs  inputhandler.rs  mod.rs  renderer.rs
source/rust/client/src/: args.rs  ecs.rs  gamestate.rs  inputsender.rs  lib.rs  network.rs  receiver.rs  run.rs
source/rust/client/ui/: font.rs  images.rs  input.rs  inputhandler.rs  mod.rs  renderer.rs  shaders.rs  textures.rs  window.rs
source/rust/client_ng/: Cargo.toml
source/rust/client_ng/src/: main.rs
source/rust/common/: Cargo.toml  dynamics.rs  lib.rs  main.rs  net.rs  protocol.rs  util.rs  vec.rs
source/rust/common/net/: acceptor.rs  connection.rs  ffi.rs  mod.rs  wrapper.rs
source/rust/common/physics/: angle.rs  body.rs  dynamics.rs  mod.rs  vec.rs
source/rust/common/src/: game.rs  lib.rs  network.rs  protocol.rs  util.rs
source/rust/core-service/: clients.rs  events.rs  main.rs  net.rs  protocol.rs  util.rs
source/rust/epoll/: Cargo.toml
source/rust/epoll/src/: ffi.rs  lib.rs  wrapper.rs
source/rust/game/: Cargo.toml
source/rust/game-service/: args.rs  clients.rs  ecs.rs  eventbuffer.rs  eventhandler.rs  events.rs  game.rs  main.rs  net.rs  network.rs  protocol.rs  updater.rs  util.rs
source/rust/game-service/game/: data.rs  ecs.rs  entities.rs  mod.rs  state.rs
source/rust/game/src/: ecs.rs  lib.rs  physics.rs  util.rs
source/rust/game_service/: Cargo.toml
source/rust/game_service/src/: args.rs  ecs.rs  events.rs  gamestate.rs  initialstate.rs  lib.rs  network.rs  run.rs  updater.rs
source/rust/game_service_ng/: Cargo.toml
source/rust/http/: Cargo.toml
source/rust/http/src/: main.rs
source/rust/ide/src/: vndf.rs
source/rust/libcommon/: Cargo.toml  ecs.rs  json.rs  lib.rs  protocol.rs
source/rust/libcommon/ecs/: components.rs  infra.rs  mod.rs
source/rust/libcommon/headless/: frame.rs  input.rs  mod.rs
source/rust/libcommon/io/: frame.rs  input.rs  inputhandler.rs  mod.rs  renderer.rs
source/rust/libcommon/net/: acceptor.rs  connection.rs  ffi.rs  mod.rs
source/rust/libcommon/physics/: angle.rs  body.rs  mod.rs  util.rs  vec.rs
source/rust/libcommon/src/: lib.rs
source/rust/libcommon/testing/: mod.rs
source/rust/libecs_macros/: lib.rs
source/rust/librustecs/: Cargo.toml  lib.rs
source/rust/librustecs_macros/: Cargo.toml  ecs.rs  entity.rs  generate.rs  lib.rs  parse.rs
source/rust/librustecs_macros/src/: ecs.rs  generate.rs  parse.rs
source/rust/net/: Cargo.toml
source/rust/net/src/: acceptor.rs  connection.rs  lib.rs
source/rust/pan/: Cargo.toml
source/rust/pan/src/: main.rs  vndf.rs
source/rust/physics/: Cargo.toml
source/rust/physics/src/: angle.rs  body.rs  lib.rs  util.rs  vec.rs
source/rust/platform/: Cargo.toml
source/rust/platform/src/: lib.rs
source/rust/platform_cli/: Cargo.toml
source/rust/platform_cli/src/: inputhandler.rs  lib.rs
source/rust/platform_desktop/: Cargo.toml
source/rust/platform_desktop/src/: font.rs  images.rs  inputhandler.rs  lib.rs  renderer.rs  shaders.rs  window.rs
source/rust/platform_gfxrs/: Cargo.toml
source/rust/platform_gfxrs/src/: font.rs  images.rs  inputhandler.rs  lib.rs  renderer.rs  window.rs
source/rust/protocol/: Cargo.toml
source/rust/protocol/src/: action.rs  lib.rs  perception.rs
source/rust/protocol_ng/: Cargo.toml
source/rust/protocol_ng/src/: action.rs  encoder.rs  lib.rs  perception.rs  protocol.rs
source/rust/rocks/: Cargo.toml
source/rust/rocks/src/: args.rs  handler.rs  main.rs
source/rust/rocks/tests/: main.rs
source/rust/rustecs/: Cargo.toml
source/rust/rustecs/src/: lib.rs
source/rust/rustecs/tests/: world.rs
source/rust/rustecs_macros/: Cargo.toml
source/rust/rustecs_macros/src/: ecs.rs  generate.rs  lib.rs  names.rs  parse.rs
source/rust/server/: Cargo.toml
source/rust/shared/: Cargo.toml
source/rust/shared/src/: game.rs  lib.rs  protocol.rs  util.rs
source/rust/src/: lib.rs  vndf-client.rs  vndf-game-service.rs
source/rust/src/client/: args.rs  cli.rs  config.rs  font.rs  inputsender.rs  keyboard.rs  main.rs  mod.rs  mouse.rs  network.rs  run.rs  window.rs
source/rust/src/common/: mod.rs
source/rust/src/gameservice/: mod.rs  network.rs  run.rs
source/rust/src/server/: clients.rs  incoming_events.rs  mod.rs  network.rs  outgoing_events.rs
source/rust/src/shared/: game.rs  mod.rs  protocol.rs  util.rs
source/rust/src/testing/: mod.rs
source/rust/test-suite/: Cargo.toml
source/rust/test-suite/tests/: main.rs
source/rust/test_infra/: Cargo.toml
source/rust/test_suite/: Cargo.toml
source/rust/test_suite/src/: lib.rs  process.rs  util.rs
source/rust/test_suite/tests/: main.rs
source/rust/test_suite_ng/: Cargo.toml
source/rust/test_suite_ng/tests/: main.rs
source/rust/test_tools/: Cargo.toml
source/rust/test_tools_ng/: Cargo.toml
source/rust/tests/: Cargo.toml  main.rs
source/rust/vndf/: Cargo.toml  build.rs
source/rust/vndf-client/: Cargo.toml
source/rust/vndf-server/: Cargo.toml
(+674 files in other folders)
