[package]

name = "vndf"
version = "0.0.1"
authors = ["Hanno Braun <mail@hannobraun.de>"]


[dependencies]
env_logger      = "*"
freetype-rs     = "*"
getopts         = "*"
gfx             = "*"
gfx_device_gl   = "*"
glutin          = "*"
libc            = "*"
log             = "*"
nalgebra        = "*"
rand            = "*"
rustc-serialize = "*"
scan_fmt        = "*"
time            = "*"
