[package]

name = "vndf"
version = "0.0.1"
authors = ["Hanno Braun <mail@hannobraun.de>"]


[lib]
test = false

[[bin]]
name = "vndf-server"
test = false

[[bin]]
name = "vndf-client"
test = false


[dependencies]
env_logger      = "*"
freetype-rs     = "*"
getopts         = "*"
gfx             = "*"
gfx_device_gl   = "*"
glutin          = "*"
libc            = "*"
log             = "*"
nalgebra        = "*"
rand            = "*"
rustc-serialize = "*"
scan_fmt        = "*"
time            = "*"
toml            = "*"
