[package]

name = "client"
version = "0.0.1"
authors = ["Hanno Braun <mail@hannobraun.de>"]

[lib]
name = "client"
path = "src/lib/lib.rs"

[[bin]]
name = "vndf-client"


[dependencies]
freetype-rs     = "*"
getopts         = "*"
gfx             = "*"
gfx_device_gl   = "*"
glutin          = "*"
libc            = "*"
nalgebra        = "*"
rustc-serialize = "*"
time            = "*"

[dependencies.common]
path = "../common"
