[package]

name = "client"
version = "0.0.1"
authors = ["Hanno Braun <mail@hannobraun.de>"]

[dependencies]
freetype-rs     = "*"
getopts         = "*"
gfx             = "*"
gfx_device_gl   = "*"
glutin          = "*"
libc            = "*"
nalgebra        = "*"
rustc-serialize = "*"
scan_fmt        = "*"
time            = "*"

[dependencies.shared]
path = "../shared"
