[package]
name    = "game"
version = "0.1.0"
authors = [ "mail@hannobraun.de" ]

[lib]
name = "game"


[dependencies.net]
path = "../net"

[dependencies.physics]
path = "../physics"

[dependencies.rustecs]
git = "https://github.com/hannobraun/rustecs.git"

[dependencies.rustecs_macros]
git = "https://github.com/hannobraun/rustecs.git"
