[package]
name    = "game_service"
version = "0.1.0"
authors = [ "mail@hannobraun.de" ]

[[bin]]
name = "vndf-game-service"

[lib]
name = "game_service"
path = "src/lib/lib.rs"


[dependencies.game]
path = "../game"

[dependencies.epoll]
path = "../epoll"

[dependencies.protocol]
path = "../protocol"
