[package]
name    = "game_service"
version = "0.1.0"
authors = [ "mail@hannobraun.de" ]

[lib]
name = "game_service"
path = "src/lib/lib.rs"

[[bin]]
name = "vndf-game-service"


[dependencies.game]
path = "../game"

[dependencies.epoll]
path = "../epoll"

[dependencies.protocol]
path = "../protocol"
