[package]

name = "game_service_ng"
version = "0.0.1"
authors = ["Hanno Braun <mail@hannobraun.de>"]

[lib]
name = "game_service"
path = "src/lib/lib.rs"

[[bin]]
name = "vndf-game-service-ng"


[dependencies]
time = "*"


[dependencies.acpe]
git = "https://github.com/hannobraun/acpe.git"

[dependencies.common]
path = "../common"
