[package]
name    = "platform_desktop"
version = "0.1.0"
authors = [ "mail@hannobraun.de" ]


[dependencies.platform]
path = "../platform"


[dependencies.freetype-rs]
git = "https://github.com/PistonDevelopers/freetype-rs.git"

[dependencies.gfx]
git = "http://github.com/gfx-rs/gfx-rs"

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"

[dependencies.stb_image]
git = "https://github.com/servo/rust-stb-image.git"
