[package]
name    = "rocks"
version = "0.1.0"
authors = [ "mail@hannobraun.de" ]


[[bin]]
name = "rocks"
test = false


[dependencies.iron]
git = "https://github.com/iron/iron.git"

[dependencies.static_file]
git = "https://github.com/hannobraun/static-file.git"

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs"
