[package]
name    = "rocks"
version = "0.1.0"
authors = [ "mail@hannobraun.de" ]


[[bin]]
name = "rocks"
test = false


[dependencies.acceptance]
path = "../acceptance-rs"

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"

[dependencies.iron]
git = "https://github.com/iron/iron.git"

[dependencies.static]
git = "https://github.com/iron/static.git"

[dependencies.toml]
git = "https://github.com/alexcrichton/toml-rs"
