[package]

name = "server"
version = "0.0.1"
authors = ["Hanno Braun <mail@hannobraun.de>"]

[lib]
name = "server"
path = "src/lib/lib.rs"

[[bin]]
name = "vndf-game-service"


[dependencies]
env_logger = "*"
getopts    = "*"
log        = "*"
nalgebra   = "*"
rand       = "*"
time       = "*"

[dependencies.common]
path = "../common"
