[package]
name    = "test_suite"
version = "0.0.1"
authors = ["Hanno Braun <mail@hannobraun.de>"]


[dependencies]
time = "*"

[dependencies.client]
path = "../client"

[dependencies.common]
path = "../common"

[dependencies.game_service_ng]
path = "../game_service"

[dependencies.acceptance]
path = "../acceptance-rs"
