[package]
name    = "test_suite_ng"
version = "0.0.1"
authors = ["Hanno Braun <mail@hannobraun.de>"]


[dependencies]
time = "*"


[dependencies.acpe]
git = "https://github.com/hannobraun/acpe.git"

[dependencies.client_ng]
path = "../client_ng"

[dependencies.common]
path = "../common"

[dependencies.acceptance]
path = "../acceptance-rs"

[dependencies.test_tools_ng]
path = "../test_tools_ng"
