[package]
name    = "test_suite"
version = "0.0.1"
authors = ["Hanno Braun <mail@hannobraun.de>"]


[dependencies]
time = "*"


[dependencies.acpe]
git = "https://github.com/hannobraun/acpe.git"
branch = "vndf-fixup"

[dependencies.client_ng]
path = "../client_ng"

[dependencies.common]
path = "../common"

[dependencies.game_service_ng]
path = "../game_service_ng"

[dependencies.acceptance]
path = "../acceptance-rs"
