[package]
name    = "test_tools"
version = "0.1.0"
authors = [ "mail@hannobraun.de" ]

[lib]
name = "test_tools"


[dependencies.game]
path = "../game"

[dependencies.game_service]
path = "../game_service"

[dependencies.platform]
path = "../platform"

[dependencies.protocol]
path = "../protocol"

[dependencies.test_infra]
path = "../test_infra"
