[package]
name    = "test_tools"
version = "0.1.0"
authors = [ "mail@hannobraun.de" ]

[lib]
name = "test_tools"


[dependencies.client_ng]
path = "../client_ng"

[dependencies.game]
path = "../game"

[dependencies.game_service]
path = "../game_service"

[dependencies.platform]
path = "../platform"

[dependencies.protocol]
path = "../protocol"

[dependencies.acceptance]
path = "../acceptance-rs"
