[package]
name    = "test_tools_ng"
version = "0.0.1"
authors = ["Hanno Braun <mail@hannobraun.de>"]

[lib]
name = "test_tools"


[dependencies]
time = "*"


[dependencies.acpe]
path = "../acpe"

[dependencies.client_ng]
path = "../client_ng"

[dependencies.game_service_ng]
path = "../game_service_ng"

[dependencies.acceptance]
path = "../acceptance-rs"
