[package]
name    = "vndf"
version = "0.1.0"
authors = [ "mail@hannobraun.de" ]

[[bin]]
name = "vndf-client"
test = false


[dependencies.client]
path = "../client"

[dependencies.game_service]
path = "../game_service"

[dependencies.acceptance]
path = "../acceptance-rs"

[dependencies.test_tools]
path = "../test_tools"
