[package]
name    = "vndf"
version = "0.0.1"
authors = ["Hanno Braun <mail@hannobraun.de>"]
build   = "build.rs"


[lib]
test = false

[[bin]]
name = "vndf-server"
test = false

[[bin]]
name = "vndf-client"
test = false

[features]
default = ["freetype-rs"]

[dependencies]
env_logger      = "*"
freetype-rs     = { version = "*", optional = true }
getopts         = "*"
gfx             = "*"
gfx_device_gl   = "*"
glutin          = "*"
libc            = "*"
log             = "*"
nalgebra        = "*"
ncollide        = "*"
num             = "*"
rand            = "*"
rustc-serialize = "*"
scan_fmt        = "*"
time            = "*"
toml            = "*"
